# very_simple_rest

./: Cargo.toml
crates/rest_macro/: Cargo.toml
crates/rest_macro/src/: lib.rs
examples/demo/src/: main.rs
