[package]
name = "rest_macro"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
rest_macro_core = { path = "../rest_macro_core" } 
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "mysql",
    "postgres",
    "any",
    "macros",
    "chrono"
] }